--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <title>Home Work JS</title>
+    <title>Test Work Idea</title>
 
     <script src="js/task-1.js" defer></script>
     <script src="js/task-2.js" defer></script>
